<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="de.hochschule_trier.boundservice.MainActivity">

    <Button
        android:text="@string/bind_service_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="handleBindService"/>
    <Button
        android:text="@string/unbind_service_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="handleUnbindService"/>
    <TextView
        android:id="@+id/serviceMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_unbound_message"/>
    <Button
        android:text="@string/inc_counter_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="handleIncrement"/>
    <Button
        android:text="@string/reset_counter_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="handleReset"/>
    <TextView
        android:id="@+id/counterOutput"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
